fixes alignment issues and rewrite paragraph in about

--- a/partials/_fonts.scss
+++ b/partials/_fonts.scss
@@ -73,7 +73,7 @@ h2 {
 
 
 p{
-    max-width: 600px;
+    max-width: 30%;
     max-height: 100%;
     height: fit-content;
     width:fit-content;
