--- a/sections/_about.scss
+++ b/sections/_about.scss
@@ -6,17 +6,41 @@
 
 
 #about {
+    @include mixins.flex-center;
     background-color: colors.$beige;
     height: fit-content;
     width: 100%;
 
-    .whole-wrap{
-        @include mixins.flex-center(row);
-        flex-wrap: wrap;
-        // border: 1px solid red;
-        max-width: 100%;
-        height:fit-content;
-    }
+
     
 }
 
+.whole-wrap{
+    @include mixins.flex-center(row);
+    flex-wrap: wrap;
+    justify-content: center;
+    // border: 1px solid red;
+
+    img {
+        max-width: 200px;
+        padding: 5px
+        
+        
+    }
+}
+    
+
+
+.text-wrapper {
+    // border: 1px solid red;
+    @include mixins.max100;
+    @include mixins.flex-center();
+    flex-wrap:wrap;
+    
+    width:fit-content;
+    // padding: 80px 0 150px 20px;
+    p{
+        padding-bottom: 30px;
+        min-width: 350px;
+    }
+}
