--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h2 {
 }
 
 p {
-  max-width: 600px;
+  max-width: 30%;
   max-height: 100%;
   height: fit-content;
   width: fit-content;
@@ -75,15 +75,6 @@ p {
 }
 .space-mono--bold--italic {
   font-style: italic;
-}
-
-.whole-wrap {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
 }
 
 .half1 {
@@ -122,18 +113,7 @@ img {
   height: auto;
   width: fit-content;
   object-fit: contain;
-  justify-self: center;
-  align-self: center;
-}
-
-.text-wrapper {
-  max-height: 100%;
-  max-width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 80px 0 150px 20px;
+  margin: 8px;
 }
 
 .caption-wrapper {
@@ -213,18 +193,41 @@ header {
 }
 
 #about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #d5d9b4;
   height: fit-content;
   width: 100%;
 }
-#about .whole-wrap {
+
+.whole-wrap {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  justify-content: center;
+}
+.whole-wrap img {
+  max-width: 200px;
+  padding: 5px;
+}
+
+.text-wrapper {
+  max-height: 100%;
   max-width: 100%;
-  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: fit-content;
+}
+.text-wrapper p {
+  padding-bottom: 30px;
+  min-width: 350px;
 }
 
 #projects {
@@ -282,11 +285,12 @@ header {
 
 #footer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  padding: 2%;
+  text-align: center;
+  padding: 2vw;
+  gap: 2vw;
 }
 
 .techstack {
